iOS: setting 'defaultValue' of input type=date from script should cause a UI update https://bugs.webkit.org/show_bug.cgi?id=185982

Patch by Stephen McGruer <smcgruer@chromium.org> on 2018-05-30
Reviewed by Darin Adler.

Source/WebCore:

Test: fast/forms/date/date-appearance-defaultValue.html

* html/BaseChooserOnlyDateAndTimeInputType.cpp:
(WebCore::BaseChooserOnlyDateAndTimeInputType::valueAttributeChanged):
* html/BaseChooserOnlyDateAndTimeInputType.h:
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseAttribute):
* html/InputType.cpp:
(WebCore::InputType::valueAttributeChanged):
* html/InputType.h:

LayoutTests:

* fast/forms/date/date-appearance-defaultValue-expected.html: Added.
* fast/forms/date/date-appearance-defaultValue.html: Added.

Canonical link: https://commits.webkit.org/201513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232289 268f45cc-cd09-0410-ab3c-d52691b4dbfc